Reformatted ProjectCompilation.html

--- a/ProjectCompilation.html
+++ b/ProjectCompilation.html
@@ -1,29 +1,29 @@
 <!DOCTYPE html>
 <html>
-<head>
-   <title>Project Compilation CS559</title>
-</head>
-<body>
-	 <canvas id="myCanvas1" 
-	   width="500" height="360"
-	   style="border:1px solid #000;">
-	 </canvas>
-     <br/><input id="slider1" type="range" min="0" max="500" /> 
-    <script src="Finn.js"></script>
-    <br/>
 
-    <canvas id="myCanvas2" 
-	    width="1000" height="1000"
-	    style="border:1px solid #000;">
+<head>
+    <title>Project Compilation CS559</title>
+</head>
+
+<body>
+    <canvas id="myCanvas1" width="500" height="360" style="border:1px solid #000;">
     </canvas>
-    <br/>
+    <br /><input id="slider1" type="range" min="0" max="500" />
+    <script src="Finn.js"></script>
+    <br />
+    <br />
+    <br />
+
+    <canvas id="myCanvas2" width="1000" height="1000" style="border:1px solid #000;">
+    </canvas>
+    <br />
     <h2>Steamboat speed:</h3>
-    <input id="slider2" type="range" min="0" max="100" style="width: 500px;"/>
-    <br/>
-    <input id="checkbox1" type="checkbox" value="false" style="width: 100px; height: 20px;">
-    <label for="checkbox1">Night Mode</label>
-    <script src="Steamboat.js" id="module"></script>
-    <br/>
+        <input id="slider2" type="range" min="0" max="100" style="width: 500px;" />
+        <br />
+        <input id="checkbox1" type="checkbox" value="false" style="width: 100px; height: 20px;">
+        <label for="checkbox1">Night Mode</label>
+        <script src="Steamboat.js" id="module"></script>
+        <br />
 
 </body>
 
